--- a/style.css
+++ b/style.css
@@ -20,35 +20,114 @@ body {
   margin: 20px auto;
   gap: 20px;
   width: 1152px;
-  height: 700px;
+  min-height: 700px;
   background: #370617;
 }
 
 .container-square {
   width: 468px;
-  min-height: 160px;
+  height: 160px;
   background: #f48c06;
   display: flex;
   gap: 10px;
   border-radius: 8px;
 }
 
+/* container blocks */
+
+.container .first-block {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 0 0 20px 20px;
+  gap: 20px;
+}
+
+.container .second-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  gap: 20px;
+}
+
+.container .third-block {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 20px;
+  gap: 20px;
+}
+
+.container .fourth-block {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.container .fifth-block {
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.container .sixt-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+/* container items */
+
 .container-square-item {
   width: 78px;
   height: 78px;
   background: #9d0208;
-  margin-bottom: 10px;
-  margin-left: 15px;
-  margin-right: 0;
-  border-radius: 8px;
+  border-radius: 4px;
 }
 
-.container-content-second-block {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
+.second-block .container-square-item {
+  width: 78px;
+  height: 120px;
+  background: #9d0208;
+  border-radius: 4px;
+  margin: 20px 0;
 }
+
+.fourth-block .container-square-item:nth-child(3) {
+  align-self: flex-end;
+}
+
+.fifth-block .container-square-item {
+  display: flex;
+}
+
+.fifth-block .container-square-item:first-child,
+.fifth-block .container-square-item:nth-child(3) {
+  height: 120px;
+}
+
+.fifth-block .container-square-item:nth-child(2) {
+  height: 64px;
+}
+
+.sixt-block .container-square-item:nth-child(2) {
+  width: 156px;
+}
+
+/* Typography */
+
+.container-square-item p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  align-self: center;
+}
+
 
 /* end of square container */
-
-/* circle container */
